k8s/kafka-ingestion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ingestion
  namespace: dublinbus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ingestion
  template:
    metadata:
      labels:
        app: kafka-ingestion
    spec:
      containers:
        - name: kafka-ingestion
          image: dublinbus-kafka-ingestion:latest
          imagePullPolicy: IfNotPresent
